# promptwars

./: .eslintrc.json  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.js  elected.db  index.css  index.html  manifest.json  package.json  pyproject.toml  requirements.txt  robots.txt  serve.py  sitemap.xml  sw.js
css/: base.css  components.css  electoralMap.css  pollmap.css  premium.css  registration.css  sections.css
js/: app.js  worker.js
js/api/: electionData.js  registrationData.js
test/: electionData.test.js  integration.test.js  registrationData.test.js
