[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "elected-server"
version = "2.3.0"
description = "ElectEd — AI-powered U.S. election education platform backend"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Pranav Mathwad" }]
requires-python = ">=3.10"
dependencies = []

[tool.black]
line-length = 79
target-version = ["py310", "py311", "py312"]
include = '\.py$'

[tool.flake8]
max-line-length = 79
max-doc-length = 79
extend-ignore = [
    "E203",   # whitespace before ':'  (Black-compatible)
    "W503",   # line break before binary operator (Black-compatible)
]
per-file-ignores = [
    "serve.py: E501",
]
count = true
statistics = true

[tool.isort]
profile = "black"
line_length = 79

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["*.test.js"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
